// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stateful behavior Should merge skipped fields with previous values 1`] = `
Object {
  "done": [Function],
  "errorCount": 1,
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": Object {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "name": "suite_name",
  "testCount": 1,
  "tests": Object {
    "field_1": Object {
      "errorCount": 1,
      "errors": Array [
        "field_statement_1",
      ],
      "testCount": 1,
      "warnCount": 0,
    },
  },
  "warnCount": 0,
}
`;

exports[`Stateful behavior Should merge skipped fields with previous values 2`] = `
Object {
  "done": [Function],
  "errorCount": 3,
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": Object {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "name": "suite_name",
  "testCount": 3,
  "tests": Object {
    "field_1": Object {
      "errorCount": 1,
      "errors": Array [
        "field_statement_1",
      ],
      "testCount": 1,
      "warnCount": 0,
    },
    "field_5": Object {
      "errorCount": 2,
      "errors": Array [
        "field_statement_5",
        "field_statement_6",
      ],
      "testCount": 2,
      "warnCount": 0,
    },
  },
  "warnCount": 0,
}
`;

exports[`Stateful behavior Should merge skipped fields with previous values 3`] = `
Object {
  "done": [Function],
  "errorCount": 4,
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": Object {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "name": "suite_name",
  "testCount": 7,
  "tests": Object {
    "field_1": Object {
      "errorCount": 1,
      "errors": Array [
        "field_statement_1",
      ],
      "testCount": 1,
      "warnCount": 0,
    },
    "field_2": Object {
      "errorCount": 1,
      "errors": Array [
        "field_statement_2",
      ],
      "testCount": 1,
      "warnCount": 0,
    },
    "field_3": Object {
      "errorCount": 0,
      "testCount": 1,
      "warnCount": 0,
    },
    "field_4": Object {
      "errorCount": 0,
      "testCount": 2,
      "warnCount": 1,
      "warnings": Array [
        "field_statement_4",
      ],
    },
    "field_5": Object {
      "errorCount": 2,
      "errors": Array [
        "field_statement_5",
        "field_statement_6",
      ],
      "testCount": 2,
      "warnCount": 0,
    },
  },
  "warnCount": 1,
}
`;
